--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -3,4 +3,4 @@ eureka.instance.hostname=localhost
 eureka.client.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8065/eureka/
