--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -1,6 +1,7 @@
 server.port=8066
-eureka.instance.hostname=localhost
 eureka.client.preferIpAddress=true
+
+eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8065/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8065/eureka/
